fix: Refactored exportByDates
Implemented sharding scatter query at repository level instead of service level